- apply CRAI suggestions